--- a/Music Player/index.html
+++ b/Music Player/index.html
@@ -35,7 +35,7 @@
                 </div>
                 
                 <button id="playPauseBtn">▶ Play</button>
-                <button id="next">⏭</button>
+                <button onclick="nextSong()" id="next">⏭</button>
             </div>   
            
         </div>
