commited changes in quiz game

--- a/quiz/index.html
+++ b/quiz/index.html
@@ -20,7 +20,7 @@
     <h6>Note:</h6>
     <p>10 seconds for Each Question</p>
     <p>Total 8 Questions</p>
-    <button id="startbtn">Start The Game</button>
+    <button onclick="startQuiz()" id="startbtn">Start The Game</button>
    </div>
 
 
